deploy-common/kong-ingress/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-backend-protocol: tcp
    service.beta.kubernetes.io/aws-load-balancer-type: nlb
  name: kong-proxy
  namespace: kong
spec:
  ports:
    - name: proxy
      port: 80
      protocol: TCP
      targetPort: 8000
    # - name: proxy-ssl
    #   port: 443
    #   protocol: TCP
    #   targetPort: 8443
    - name: proxy-admin
      port: 81
      protocol: TCP
      targetPort: 8001
    # - name: proxy-admin-ssl
    #   port: 444
    #   protocol: TCP
    #   targetPort: 8444
    - name: proxy-admin-gui
      port: 82
      protocol: TCP
      targetPort: 8002
  selector:
    app: ingress-kong
  type: NodePort
